css/references.css
/* Setting the background of all the references I have.*/
.firstReference {
  display: block;
  height: 350px;
}

.img1 {
  background-repeat: no-repeat;
  position: absolute;
  opacity: 0.6;
  width: 100%;
  height: 300px;
}

.container1 {
  font-color: black;
  left: 10px;
}

.secondReference {
  display: block;
  height: 350px;
}

.img2 {
  background-repeat: no-repeat;
  position: absolute;
  top: 425px;
  opacity: 0.6;
  width: 100%;
  height: 300px;
}

.container2{
  font-color: black;
  left: 10px;
  top: 400px;
}

.thirdReference {
  display: block;
  height: 350px;
}

.img3 {
  background-repeat: no-repeat;
  position: absolute;
  top: 725px;
  opacity: 0.6;
  width: 100%;
  height: 300px;
}

.container3 {
  font-color: black;
  left: 10px;
  top: 600px;
}

.fourthReference {
  display: block;
  height: 300px;
}

.img4 {
  background-repeat: no-repeat;
  position: absolute;
  top: 1000px;
  opacity: 0.6;
  width: 100%;
  height: 300px;
}

.container4 {
  font-color: black;
  left: 10px;
  top: 850px;
}


/* Changing the font for all divs. */
h4 {
  font-size: 22px;
}

p {
  font-size: 15px;
}

p.contact {
  font-size: 20px;
}

